# Marigold

./: .gitignore  pyproject.toml
marigold/: marigold_pipeline.py
