[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "marigold"
version = "0.0.0"
description = "Marigold: Repurposing Diffusion-Based Image Generators for Monocular Depth Estimation"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
]
dependencies = [
    "accelerate",
    "diffusers",
    "matplotlib",
    "scipy",
    "torch",
    "transformers"
]

[tool.setuptools.packages.find]
include = ["marigold*"]

